                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-03-2006 fixed: [1345507] First track of CD Audio not playing on latest XBMC builds!
 - 06-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 06-03-2006 updated: German language file
 - 06-03-2006 updated: Dutch language file (Thnx to console-ombouw)
 - 06-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 06-03-2006 updated: Swedish language file (Thnx to blittan)
 - 06-03-2006 updated: Norwegian language file (Thnx to vnm)
 - 06-03-2006 changed: Album Info and Video Info cover images are no longer set to keep aspect ratio in the code (it can now be controlled in the skin).
 - 05-03-2006 fixed: dvdplayer would sometimes lock up when trying to restore a bookmark
 - 05-03-2006 fixed: if libdvdnav threw an exception, dvdplayer would lockup
 - 05-03-2006 fixed: audio stream opening could be delayed in dvdplayer causing stuttering
 - 05-03-2006 fixed: playing quicktime files would make xbmc leak 100k per file. reduced to about 50k. 
 - 03-03-2006 fixed: Better music database lower case comparisons (paths are stored as is, but compared lower case).
 - 03-03-2006 added: "Clear Default" to the root bookmark context menu
 - 03-03-2006 fixed: album lookups with a single 100% match in the list
 - 03-03-2006 changed: file manager, a new folder is now highlighted as current item after it is created
 - 03-03-2006 fixed: music nav, after getting album information the thumb of the item is not updated
 - 03-03-2006 changed: music nav, genres, artists and albums are not cached to disc anymore
 - 03-03-2006 fixed: music nav, a cached dir in does not show the parent folder item